// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`example.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await something();

=====================================output=====================================
await something();

================================================================================
`;

exports[`in-expression.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
call(
await something()
)

=====================================output=====================================
call(await something());

================================================================================
`;

exports[`test.cjs format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await(1);

=====================================output=====================================
await(1);

================================================================================
`;

exports[`test.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;

exports[`test.mjs format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;
